# zeta_framework

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  clean.bat
deprecated/: .clang-format
zeta_framework/: Makefile  build.bat
zeta_framework/include/: zfw.h  zfw_builtin_shader_prog_srcs.h  zfw_input_codes.h  zfw_utils.h
zeta_framework/include/glad/: glad.h
zeta_framework/src/: glad.c  zfw.c  zfw_assets.c  zfw_game.c  zfw_input.c  zfw_rendering.c  zfw_utils.c
zfw/: CMakeLists.txt
zfw/deprecated/: Makefile  zfw.h
zfw/include/: zfw.h  zfw_assets.h  zfw_game.h  zfw_input.h  zfw_math.h  zfw_rendering.h  zfw_utils.h
zfw/src/: zfw_assets.c  zfw_game.c  zfw_input.c  zfw_math.c  zfw_rendering.c  zfw_utils.c
zfw_asset_packer/: CMakeLists.txt  Makefile  build.bat  main.c
zfw_asset_packer/deprecated/: Makefile
zfw_asset_packer/src/: main.c
zfw_common/: CMakeLists.txt  Makefile  build.bat
zfw_common/deprecated/: Makefile  zfw_common.h
zfw_common/include/: zfw_common.h  zfw_common_assets.h  zfw_common_bits.h  zfw_common_debug.h  zfw_common_math.h  zfw_common_mem.h  zfw_common_misc.h
zfw_common/src/: zfw_common.c  zfw_common_bits.c  zfw_common_debug.c  zfw_common_math.c  zfw_common_mem.c  zfw_common_misc.c
